# snapcast

./: .clang-format  .clang-tidy  .clangd  .dir-locals.el  .gitignore  .gitmodules  .syntastic_cpp_config  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  Makefile  Makefile.openwrt  README.md  Snap.workspace  Snap.workspace.layout  SnapClient.cbp  SnapClient.layout  SnapServer.cbp  SnapServer.layout  TODO.md  _CMakePresets.json  _config.yml  blocking_tcp_echo_client.cpp  blocking_tcp_echo_server.cpp  bug.txt  build.sh  build_android.sh  build_linux.sh  changelog.md  chunk.cpp  chunk.h  client.cpp  conanfile.py  conanw.sh  decoder_example.c  doubleBuffer.h  encoder_example.cpp  install.sh  (+17 more)
client/: CMakeLists.simple.txt  CMakeLists.txt  Makefile  Makefile~  alsaPlayer.cpp  alsaPlayer.h  browseAvahi.cpp  browseAvahi.h  browseBonjour.cpp  browseBonjour.h  browsemDNS.h  build_android.sh  build_android_all.sh  bundle.i386.wxs.in  bundle.wxs  bundle.x86_64.wxs.in  chrony_client.cpp  chrony_client.hpp  clientConnection.cpp  clientConnection.h  client_connection.cpp  client_connection.hpp  client_connection_rist_bidirectional.cpp  client_connection_rist_bidirectional.hpp  client_settings.hpp  controller.cpp  controller.h  controller.hpp  decoder.h  doubleBuffer.h  double_buffer.hpp  flacDecoder.cpp  flacDecoder.h  metadata.h  metadata.hpp  oggDecoder.cpp  oggDecoder.h  opusDecoder.cpp  opusDecoder.h  pcmDecoder.cpp  (+26 more)
client/browseZeroConf/: browseAvahi.cpp  browseAvahi.h  browseBonjour.cpp  browseBonjour.h  browse_avahi.cpp  browse_avahi.hpp  browse_bonjour.cpp  browse_bonjour.hpp  browse_mdns.hpp  browse_zeroconf.hpp  browsemDNS.h
client/debian/: changelog  conffiles  control  copyright  postrm  rules  snapclient.default  snapclient.init  snapclient.plist  snapclient.postinst  snapclient.postrm  snapclient.service
client/decoder/: decoder.h  decoder.hpp  flacDecoder.cpp  flacDecoder.h  flac_decoder.cpp  flac_decoder.hpp  null_decoder.cpp  null_decoder.hpp  oggDecoder.cpp  oggDecoder.h  ogg_decoder.cpp  ogg_decoder.hpp  opus_decoder.cpp  opus_decoder.hpp  pcmDecoder.cpp  pcmDecoder.h  pcm_decoder.cpp  pcm_decoder.hpp
client/etc/: snapclient.plist
client/player/: alsaPlayer.cpp  alsaPlayer.h  alsa_player.cpp  alsa_player.hpp  coreAudioPlayer.cpp  coreAudioPlayer.h  coreaudio_player.cpp  coreaudio_player.hpp  file_player.cpp  file_player.hpp  oboe_player.cpp  oboe_player.hpp  openslPlayer.cpp  openslPlayer.h  opensl_player.cpp  opensl_player.hpp  pcmDevice.h  pcm_device.hpp  pipewire_player.cpp  pipewire_player.hpp  pipewire_player_aanno.cpp  pipewire_player_aanno.hpp  pipewire_player_simple.cpp  pipewire_player_simple.hpp  player.cpp  player.h  player.hpp  pulse_player.cpp  pulse_player.hpp  software_dsp.cpp  software_dsp.hpp  wasapiPlayer.cpp  wasapiPlayer.h  wasapi_player.cpp  wasapi_player.h  wasapi_player.hpp
common/: CMakeLists.txt  ackMsg.h  aixlog.cpp  aixlog.hpp  avahiService.h  base64.cpp  base64.h  buffer_pool.cpp  buffer_pool.hpp  chrony_base.cpp  chrony_base.hpp  chunk.cpp  chunk.h  chunk.old.cpp  chunk.old.h  compat.h  daemon.cpp  daemon.h  daemon.hpp  endian.h  endian.hpp  error_code.hpp  headerMessage.h  json.hpp  jwt.cpp  jwt.hpp  log.cpp  log.h  message.cpp  message.h  metatags.h  metatags.hpp  pcmChunk.cpp  pcmChunk.h  popl.hpp  properties.hpp  publishAvahi.cpp  publishAvahi.h  queue.h  queue.hpp  (+33 more)
common/message/: CMakeLists.txt  client_info.hpp  client_settings.hpp  client_system_info.hpp  codecHeader.h  codec_header.hpp  error.hpp  factory.hpp  hello.h  hello.hpp  jsonMessage.h  json_message.hpp  message.h  message.hpp  pcmChunk.h  pcm_chunk.hpp  serverSettings.h  server_settings.hpp  streamTags.h  stream_tags.hpp  time.h  time.hpp  wireChunk.h  wire_chunk.hpp
common/utils/: file_utils.cpp  file_utils.h  file_utils.hpp  logging.hpp  string_utils.cpp  string_utils.h  string_utils.hpp
server/: CMakeLists.txt  Makefile  authinfo.cpp  authinfo.hpp  build_android.sh  chrony_master.cpp  chrony_master.hpp  clientSession.cpp  clientSession.h  config.cpp  config.h  config.hpp  controlServer.cpp  controlServer.h  controlSession.cpp  controlSession.h  control_requests.cpp  control_requests.hpp  control_server.cpp  control_server.hpp  control_session.hpp  control_session_http.cpp  control_session_http.hpp  control_session_tcp.cpp  control_session_tcp.hpp  control_session_ws.cpp  control_session_ws.hpp  encoder.h  encoderFactory.h  flacEncoder.cpp  flacEncoder.h  image_cache.hpp  jsonrp.cpp  jsonrp.hpp  jsonrpc.cpp  jsonrpc.h  jsonrpcpp.hpp  jwt.cpp  jwt.hpp  oggEncoder.cpp  (+42 more)
server/debian/: changelog  control  copyright  postinst  snapserver.bsd  snapserver.default  snapserver.init  snapserver.plist  snapserver.postinst  snapserver.postrm  snapserver.service
server/encoder/: encoder.cpp  encoder.h  encoder.hpp  encoderFactory.cpp  encoderFactory.h  encoder_factory.cpp  encoder_factory.hpp  flacEncoder.cpp  flacEncoder.h  flac_encoder.cpp  flac_encoder.hpp  null_encoder.cpp  null_encoder.hpp  oggEncoder.cpp  oggEncoder.h  ogg_encoder.cpp  ogg_encoder.hpp  opus_encoder.cpp  opus_encoder.hpp  pcmEncoder.cpp  pcmEncoder.h  pcm_encoder.cpp  pcm_encoder.hpp
server/etc/: index.html  interface.html  snapserver.bsd  snapserver.conf  snapserver.plist
server/json/: .gitignore  Makefile  json.hpp  jsonRequestId.h  jsonrpc.cpp  jsonrpc.h  jsonrpcException.h  jsonrpctest.cpp
server/pcmreader/: fileReader.cpp  fileReader.h  pcmReader.cpp  pcmReader.h  pcmReaderFactory.cpp  pcmReaderFactory.h  pipeReader.cpp  pipeReader.h  readerUri.cpp  readerUri.h  streamManager.cpp  streamManager.h
server/publishZeroConf/: publishAvahi.cpp  publishAvahi.h  publishBonjour.cpp  publishBonjour.h  publish_avahi.cpp  publish_avahi.hpp  publish_bonjour.cpp  publish_bonjour.hpp  publish_mdns.hpp  publish_zeroconf.hpp  publishmDNS.h
server/streamreader/: airplayStream.cpp  airplayStream.h  airplay_stream.cpp  airplay_stream.hpp  alsa_stream.cpp  alsa_stream.hpp  asio_stream.hpp  base64.cpp  (+56 more)
test/: CMakeLists.txt  Makefile  message.cpp  message.h  test.cpp  test_main.cpp
(+309 files in other folders)
